<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Minesweeper</string>
    <string name="title_screen_title">Minesweeper</string>
    <string name="title_screen_instructions">Instructions:&#10;&#10;- Tap a cell to reveal it&#10;- Long tap to flag/unflag a suspected mine&#10;- Reveal all non-mine cells to win&#10;- Do not reveal a mine</string>
    <string name="btn_play">Play Game</string>
    <string name="btn_settings">Settings</string>
    <string name="settings_title">Game Settings</string>
    <string name="settings_rows">Number of Rows</string>
    <string name="settings_columns">Number of Columns</string>
    <string name="settings_mines">Percentage of Mines</string>
    <string name="settings_covered_color">Covered Cell Color</string>
    <string name="settings_uncovered_color">Uncovered Cell Color</string>
    <string name="settings_suspected_color">Suspected Cell Color</string>
    <string name="settings_mine_color">Mine Color</string>
    <string name="game_win">Congratulations, You won!</string>
    <string name="game_lose">Game Over, You hit a mine!</string>
    <string name="btn_back_to_main">Back to Main</string>
</resources>

